fix MobileNav spacing

--- a/src/styles/MobileNav.css
+++ b/src/styles/MobileNav.css
@@ -5,12 +5,12 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 12vh;
+  padding-top: 1.7vh;
+  margin-bottom: 1.7vh;
   background: rgba(06, 05, 03, 0.6);
   backdrop-filter: blur(30px);
   color: #fff;
   text-align: center;
-  padding-top: 1.7vh;
   font-size: 10px;
 }
 
